<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="text_donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="gelat_string">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="iogurt_string">FroYo is premium self-serve frozen yogurt</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">Chosen: </string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
    <string name="spinner_string">Vols afegir res més al carro?</string>
    <string-array name="pedido_Extra">
        <item>Donut</item>
        <item>Gelat</item>
        <item>Iogurt</item>
    </string-array>
</resources>