<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:gravity="center"
        android:id="@+id/textViewGelat"
        android:layout_width="143dp"
        android:layout_height="103dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="208dp"
        android:text="@string/gelat_string"
        app:layout_constraintStart_toEndOf="@+id/imageViewGelat"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitol" />

    <TextView
        android:id="@+id/textViewTitol"
        android:layout_width="311dp"
        android:layout_height="57dp"
        android:text="@string/droid_desserts"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <ImageView
        android:id="@+id/imageViewDonut"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="128dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:onClick="showDonutOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donut_circle" />

    <ImageView
        android:id="@+id/imageViewGelat"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:onClick="showIceCreamOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDonut"
        app:srcCompat="@drawable/icecream_circle" />

    <ImageView
        android:id="@+id/imageViewIogurt"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:onClick="showFroyoOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGelat"
        app:srcCompat="@drawable/froyo_circle" />

    <TextView
        android:id="@+id/textViewDonut"
        android:layout_width="154dp"
        android:layout_height="82dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/text_donut"
        app:layout_constraintStart_toEndOf="@+id/imageViewDonut"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitol" />

    <TextView
        android:gravity="center"

        android:id="@+id/textViewIogurt"
        android:layout_width="146dp"
        android:layout_height="104dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="352dp"
        android:text="@string/iogurt_string"
        app:layout_constraintStart_toEndOf="@+id/imageViewIogurt"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitol" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/choose_a_dessert"
        app:layout_constraintBottom_toTopOf="@+id/imageViewDonut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>